--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "testcafe chrome tests/"
+    "test": "testcafe chrome \"**/__tests__/tests/**/*.js?(x)\""
   },
   "repository": {
     "type": "git",
